# clifford_sim

./: CMakeLists.txt  README.md  coppyCMakeLists.txt  package.xml
MPC/MPC_Planning/: traj_opt_dynamics.m
MPC/MPC_tracking/: Init.m  KinematicModel.m  MAIN.m  MPC.m  path.mat  traj.mat
MPC/MPC_tracking/TrajGenerator/: getTrajectory.m  path.mat
MPC/MPC_tracking/TrajGenerator/traj/: lanechange.mat  overtake.mat  park.mat  path.mat
data/: PI_ground_05.csv  PI_ramp_030.csv  apriltag.txt  data.txt  data3.txt  data4.txt  data_analysis.xlsx  data_pid_00.txt  manual_test.bag  mocap_apriltag_test.bag  mocap_apriltag_test_old.bag  pid0_025.csv  pid1_ground_025.csv  pid1_ground_05.csv  pid_test_0.25_2021-02-21-14-42-28.bag  pid_test_0.25_2021-02-21-14-45-06.bag  vel_throt00.bag  vy_0.5_kp_y_1.5.bag  vy_PI_ground_025.csv
data/data_processed/: PI_ground_025.csv  PI_ground_050.csv  PI_ground_050_ki_0.15.csv  PI_ground_050_ki_0.25.csv  PI_ramp_020.csv  PI_ramp_030.csv
launch/: clifford_empty_world.launch  clifford_ramp.launch  display.launch  fast_empty_world.launch  gazebo.launch  hello.launch  mocap_driver.launch  stop_clifford.launch
models/clifford/: clifford.sdf  model.config
models/cliffordClosedChain/: cliffordClosedChain (copy).sdf  cliffordClosedChain.sdf  model.config
models/ground/: ground.sdf  model.config
models/materials/scripts/: gazebo.material
scripts/: aStar_steered.py  avg_vel.py  cliffDriver.py  diamond_square.py  double_int.py  gain_sched.py  generateTerrain.py  imu2odom.py  mouseControl.py  plotter.py  pose2odom.py  pose_publisher.py  randomTerrainTrajFollow.py  random_terrain_stl.py  resetWorld.py  robotPath.txt  simController.py  spawn_delete.py  stop_clifford.py  test.py  tf2odom.py  training.py
src/: SearchData.h  ackermannPlanner.cpp  cliffordPlugin.cpp  robotState.h  searchSetup.h  stlastar.h
worlds/: fast_empty.world  hello.world  ramp.world
