<package format="2">
  <name>clifford_sim</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for clifford</p>
    <p>This package contains configuration data, 3D models and launch files
for clifford robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>
</package>
